Deleted old links and some text in bio

--- a/about.html
+++ b/about.html
@@ -81,22 +81,19 @@
         <div class="row-fluid">
             <h1>Perfect balance of design and technology</h1>
 <div class="about-left">
-  <h2>Gladys "Hazel" Diaz</h2>
+  <h2>Gladys Diaz</h2>
   <div class="clearfix">
     <img src="shared/img/about/hazel-150.png" class="profile-img" />
     <div class="profile-social social">
       <h4>Co-founder / Lead Designer</h4>
-      <a href="http://www.linkedin.com/in/gladiaz" target="_blank">LinkedIn</a>
+      <a href="http://www.linkedin.com/in/ghdiaz" target="_blank">LinkedIn</a>
       <a href="http://gladysdiaz.com" target="_blank">Website</a>
-      <a href="http://dribbble.com/gladys" target="_blank">Dribbble</a>
-      <a href="https://plus.google.com/102879649016911190024?prsrc=3" target="_blank">Google+</a>
-      <a href="http://500px.com/hazeldiaz" target="_blank">500px</a>
     </div>
   </div>
-  <p>For the past 10 years, I have enjoyed designing numerous websites and apps for start ups, ad agencies, and fortune 500 companies. I pursued design after high school, graduating from the University of Oregon with a B.S. in Multimedia Design and double-minors in Business Administration and Computer Information Technology. Though I value my experience at UO, I taught myself HTML, CSS, and user interface design in the real world, as design trends and technology always change.</p>
-  <p>I worked as an Interactive Designer and quickly proved my design abilities as I took on the role of Art Director at a Los Angeles ad agency. For the five years I've worked there, I lead the design for numerous projects for high-profile clients such as SANYO, IGN, Robb Report, Wells Fargo, GRAMMY, Bose+Ferrari and more. I've designed over 35 small to large-scale websites and apps, garnering over 25 Web and graphic design awards for that company.</p> 
-<p>Currently, I am the lead designer and co-founder at Calisto Labs, where my role in projects ranges anywhere from project management, wireframing and information design, creating the user experience, designing the user interface keeping in mind the latest technologies as well as the brand and target audience, and implementing the designs in HTML and CSS. I often work with developers as they program the backend while I work on the frontend design.</p>
-  <p>I love traveling and exploring new places at least once a year. Other cultures, their art and their environment inspire and invigorate me. Check out <a target="_blank" href="http://500px.com/hazeldiaz">my travel photography on 500px</a>.</p>
+  <p>For the past 10 years, I have enjoyed designing numerous websites and apps for start ups, ad agencies, and fortune 500 companies.</p>
+  <p>I started as an Interactive Designer and quickly moved into the role of Art Director at a Los Angeles ad agency. For the five years I've worked there, I lead the design for numerous projects for high-profile clients such as SANYO, IGN, Robb Report, Wells Fargo, GRAMMY, Bose+Ferrari and more. I've designed over 35 small to large-scale websites and apps, which helped garner over 25 Web and graphic design awards for that company.</p> 
+  <p>Currently, I am the lead designer and co-founder at Calisto Labs, where my role in projects ranges anywhere from project management, wireframing and information design, creating the user experience, designing the user interface keeping in mind the latest technologies as well as the brand and target audience, and implementing the designs in HTML and CSS. I often work with developers as they program the backend while I work on the frontend design.</p>
+  <p>I love traveling and exploring new places. Other cultures, their art and their environment inspire and invigorate me.</p>
 </div>
 
 <div class="about-right">
