--- a/about.html
+++ b/about.html
@@ -80,24 +80,9 @@
     <div class="content container">
         <div class="row-fluid">
             <h1>Perfect balance of design and technology</h1>
-<div class="about-left">
-  <h2>Gladys Diaz</h2>
-  <div class="clearfix">
-    <img src="shared/img/about/hazel-150.png" class="profile-img" />
-    <div class="profile-social social">
-      <h4>Co-founder / Lead Designer</h4>
-      <a href="http://www.linkedin.com/in/ghdiaz" target="_blank">LinkedIn</a>
-      <a href="http://gladysdiaz.com" target="_blank">Website</a>
-    </div>
-  </div>
-  <p>For the past 10 years, I have enjoyed designing numerous websites and apps for start ups, ad agencies, and fortune 500 companies.</p>
-  <p>I started as an Interactive Designer and quickly moved into the role of Art Director at a Los Angeles ad agency. For the five years I've worked there, I lead the design for numerous projects for high-profile clients such as SANYO, IGN, Robb Report, Wells Fargo, GRAMMY, Bose+Ferrari and more. I've designed over 35 small to large-scale websites and apps, which helped garner over 25 Web and graphic design awards for that company.</p> 
-  <p>Currently, I am the lead designer and co-founder at Calisto Labs, where my role in projects ranges anywhere from project management, wireframing and information design, creating the user experience, designing the user interface keeping in mind the latest technologies as well as the brand and target audience, and implementing the designs in HTML and CSS. I often work with developers as they program the backend while I work on the frontend design.</p>
-  <p>I love traveling and exploring new places. Other cultures, their art and their environment inspire and invigorate me.</p>
-</div>
 
-<div class="about-right">
-  <h2>Jesal Gadhia</h2>
+<div style="border-top: solid 1px #ddd; border-bottom: solid 1px #ddd; margin-bottom: 25px">
+  <h2 style="margin-bottom: 10px">Jesal Gadhia</h2>
     <div class="clearfix">
     <img src="shared/img/about/jesal-150.jpg" class="profile-img" />
     <div class="profile-social social">
