--- a/about.html
+++ b/about.html
@@ -83,6 +83,8 @@
 
 <div style="border-top: solid 1px #ddd; border-bottom: solid 1px #ddd; margin-bottom: 25px">
   <h2 style="margin-bottom: 10px">Jesal Gadhia</h2>
+</div>
+<div>
     <div class="clearfix">
     <img src="shared/img/about/jesal-150.jpg" class="profile-img" />
     <div class="profile-social social">
