--- a/about.html
+++ b/about.html
@@ -102,7 +102,23 @@
     <p>While working through the trenches, I continue to hone my skills at designing software with scalability, extensibility, maintainability, and other best practices in mind. I try to have a pragmatic approach on all projects I work on i.e obsessing over the minute details while not losing sight of the big picture to make sure the end product is not only successful but delivered on time.</p>
     <p>Now as the lead developer and co-founder of Calisto Labs, my role spans anywhere from writing code to managing projects to overseeing day-to-day business operations along with my co-founder. In addition to that, I strive to be a constant supplier of new technical solutions for our clients by keeping up with the pace of innovation, staying on top of the latest trends, and experimenting with various technologies.</p>
     <p>In my spare time, you can find me tinkering on some of my <a target="_blank" href="http://jes.al/projects/">side-projects</a> or working on my <a target="_blank" href="http://500px.com/jesalg">amateur photography</a> skills.</p>
-</div>        </div>
+</div>    
+            
+   <div style="border-top: solid 1px #ddd; border-bottom: solid 1px #ddd; margin-bottom: 25px">
+  <h2 style="margin-bottom: 10px">Hazel Diaz</h2>
+</div>
+<div>
+    <div class="clearfix">
+    <img src="shared/img/about/hd-150.jpg" class="profile-img" />
+    <div class="profile-social social">
+      <h4>Co-founder / Lead Designer</h4>
+    </div>
+  </div>
+  <p>I got my start in the design industry at a small interactive design agency in LA. There, I designed over 35 websites and apps for clients such as SANYO, IGN and EA, Wells Fargo, Robb Report, Grammy, and Bose+Ferrari. I also collaborated across teams from clients and sales to project management and development, creating wireframes, design comps, and developing the front-end for large CMS-driven sites.</p>
+    <p>At Calisto, I enjoy leading the design from concept to completion——making sure the final product is pixel-perfect on all browsers and clients are happy with the results. I am passionate about solving design problems and I am constantly learning new technologies and design trends.</p>
+</div>
+        
+        </div>
 
     </div>
     <!-- /Content Container -->
