--- a/about.html
+++ b/about.html
@@ -118,8 +118,11 @@
     </div>
   </div>
   <p>I got my start in the design industry at a small interactive design agency in LA. There, I designed over 35 websites and apps for clients such as SANYO, IGN and EA, Wells Fargo, Robb Report, Grammy, and Bose+Ferrari. I also collaborated across teams from clients and sales to project management and development, creating wireframes, design comps, and developing the front-end for large CMS-driven sites.</p>
-    <p>At Calisto, I enjoy leading the design from concept to completion——making sure the final product is pixel-perfect on all browsers and clients are happy with the results. I am passionate about solving design problems and I am constantly learning new technologies and design trends.</p>
+    <p>At Calisto, I enjoy leading the design from concept to completion—making sure the final product is pixel-perfect on all browsers and clients are happy with the results. I am passionate about solving design problems and I am constantly learning new technologies and design trends.</p>
 </div>
+            <br />
+            <br />
+            <br />
         
         </div>
 
